2002-06-25  Ken Raeburn  <raeburn@mit.edu>

	* compat_recv.c: New file, moved from lib/krb5util.
	* Makefile.in (SRCS, OBJS): Include it.
	(rcp, kshd, klogind): Link against it instead of krb5util
	library.
	* defines.h (krb5_compat_recvauth, krb5_compat_recvauth_version):
	Move declarations here from include/k5-util.h.
	(princ_maps_to_lname): Declare.

	* kcmd.c (kcmd_connect): Use strdup when copying hostname.
	(princ_maps_to_lname, default_realm): Move functions here...
	* krlogind.c (princ_maps_to_lname, default_realm): ...from here.
	(recvauth): Use sockaddr_storage to hold addresses.
	* krshd.c (default_realm, princ_maps_to_lname): Deleted.

	* krsh.c (SECURE_MESSAGE): Only indicate that input/output data
	are being encrypted, and don't automatically say it's with DES.

	* krlogind.c: Include fake-addrinfo.h.
	(SECURE_MESSAGE): Don't say it's DES that's used for encryption.
	(main): "from" is now sockaddr_storage; cast pointers when calling
	doit.
	(doit): Take sockaddr pointer instead of sockaddr_in.  Use
	getnameinfo instead of inet_ntoa and gethostbyaddr.  Only complain
	about non-IPv4 addresses if not doing Kerberos, and only right
	before checking port numbers.

2002-06-17 Jen Selby <jenselby@mit.edu>

	* klogind.M: documented the -D and -f options
	* ksh.M: documented the -D and -L options
	* rcp.M: documented the -c and -C options

2002-05-22  Ken Raeburn  <raeburn@mit.edu>

	* krlogin.c (oob): Loop reading data until we actually reach the
	URG marker.

2002-03-26  Ken Raeburn  <raeburn@mit.edu>

	* defines.h (FAI_PREFIX): Don't define.
	* kcmd.c (kcmd_connect): Don't include fake-addrinfo.c.

2002-03-20  Ezra Peisach  <epeisach@mit.edu>

	* Makefile.in: Remove dependencies on krb524_err.h for login.o. If
	compiling without krb4 support, this file will not be present.

2002-03-13  Ken Raeburn  <raeburn@mit.edu>

	* kcmd.c (kcmd_connect): Don't call fixup_addrinfo, it's been
	deleted.  Actually save errno value when preparing error text to